--- a/index.html
+++ b/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
-        <style>
-            p{
-                /* writing-mode:vertical-lr;
-                text-orientation:upright; */
-                font-size: 30px;
-                font-family: 'Courier New', Courier, monospace;
-                text-shadow : 3px 10px 1 #f1efef, 2px 2px 2 blueviolet;
-            }
-        </style>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styless.css">
     </head>
     <body>
-        <h1>Good Morning</h1>
-        <h4 style="background-color: violet;">First CSS Session</h4>
-        <p>Css Gives Richer Presentation</p>
-        <p>One more P Tag</p>
-        <h5>Hey</h5>
-        <h6>2nd Code</h6>
-        <p class="New">
-            9:15 Start Daily
-            10:30 - 10:45 break
-            12:30 - 12:45 break
-            3:30 - 3:45 break
-            5:30 Close
-        </p>
-        <p id="News">
-            9:15 Start Daily
-            10:30 - 10:45 break
-            12:30 - 12:45 break
-            3:30 - 3:45 break
-        </p>
+        <form class="box">
+        <h1>LOG IN</h1>
+        <input type="text" placeholder="username" name="'uname" id="uname">
+        <input type="password" placeholder="Password" name="'upwd" id="upwd">
+        <input type="submit" value="Log in">
+        </form>
+        <button onclick="clickme()"> Click Me</button>
+        <script src="" async defer></script>
     </body>
 </html>
